# quotes_dab

./: .gitignore  404.html  README.md  databricks.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: quotes_ci_cd.yml  update_docs.yml
common_functions/: index.html
docs/: common_functions.md  index.md  logging.md  references.md  tests.md  use_case_functions.md
docs/templates/: using_common_functions..md
logging/: index.html
quotes_dab/: common.py  create_catalog_quotes.py  dummy.py  provide_config.py  request_quote.py
quotes_dab/pipeline/: dlt_quote.py
quotes_dba/: common.py  config_logging.py  create_catalog_quotes.py  dummy.py  provide_config.py  request_quote.py
quotes_dba/pipeline/: dlt_quote.py
quotes_dba_bundle/: README.md  setup.py
quotes_dba_bundle/src/: dlt_pipeline.ipynb  notebook.ipynb
quotes_dba_bundle/tests/: main_test.py
references/: index.html
resources/: dlt_quotes_dab.yml  dlt_quotes_dba.yml  quotes_dab_bundle_job.yml  quotes_dba_bundle_dlt_pipeline.yml  quotes_dba_bundle_job.yml
search/: search_index.json
tests/: conftest.py  index.html
tests/integration/: test_api_ninjas.py
tests/unit_local/: test_common.py  test_dummy.py  test_extract.py
use_case_functions/: index.html
